maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:71: error: Unmatched closing brace '}' ignored here
}
^