maze.pledge.PledgeMaze.scala.code
override def run() {
  
 trouverNord()
 droite()
 while(estSurBiscuit()==false){
    keepHandOnSideWall()
 }

}

def trouverNord(){
  var y:Int=getY()
	while(estFaceMur()==false){
    setDirection(Direction.NORTH)
    if(estFaceMur()==true){
      droite()
      if(estFaceMur()==true){
        gauche()
        gauche()
      }
      
      avance()
      setDirection(Direction.NORTH)
    }else{
      avance()
    }
   y=getY() 
  }   
  
}

def keepHandOnSideWall(){
	
   
      if(estFaceMur()==true){
        droite()

        if(estFaceMur()==true){
          gauche()
        }else{
          avance()
          gauche()
          while(estFaceMur()==false){
            avance()
            gauche()
           
        }

        }

      }else{
        avance()
        gauche()
        while(estFaceMur()==false){
          avance()
          gauche()
          
        }

        while(estFaceMur()==true){
          droite()
          
        }

    }
  
    }
}